Bring in source from JetFuel so only one project